objects/Reservable__c.object
<CustomObject>
    <fields>
        <fullName>Archived_On__c</fullName>
        <label>Archived On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_UUID__c</fullName>
        <formula>Building__r.UUID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building__c</fullName>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Reservables</relationshipLabel>
        <relationshipName>Offices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cluster_Name__c</fullName>
        <formula>Building__r.Cluster_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Email__c</fullName>
        <formula>Building__r.Cluster_Sales_Lead_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Lead_Name__c</fullName>
        <formula>Building__r.Cluster_Sales_Lead_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Lead Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Cluster_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cluster_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Cluster_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conference_Room_Credits__c</fullName>
        <formula>IF( TEXT(Office_Work_Station_Type__c) == 'DedicatedDesk', 
  5, 
IF( TEXT(Office_Work_Station_Type__c) == 'HotDesk', 
  2,
  (2 * Office_Capacity__c )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conference Room Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Floor__c</fullName>
        <description>As per the CSI-542 ticket we change this field type from Number to Text</description>
        <label>Floor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hold_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hold By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reservables</relationshipLabel>
        <relationshipName>Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hold_Expiration__c</fullName>
        <label>Hold Expiration</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hot_Desk_Capacity__c</fullName>
        <label>Hot Desk Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hot_Desk_Occupancy__c</fullName>
        <label>Hot Desk Occupancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Move_In__c</fullName>
        <label>Last Move In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Move_Out__c</fullName>
        <label>Last Move Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Price__c</fullName>
        <label>Monthly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_B_W__c</fullName>
        <formula>120*Office_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Prints/Copies B&amp;W</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Prints_Copies_Color__c</fullName>
        <formula>20*Office_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Prints/Copies Color</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Move_In__c</fullName>
        <label>Next Move In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Move_Out__c</fullName>
        <label>Next Move Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Capacity__c</fullName>
        <label>Office Capacity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Work_Station_Number__c</fullName>
        <label>Office/Work Station Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Work_Station_Type__c</fullName>
        <label>Office/Work Station Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HotDeskArea</fullName>
                </value>
                <value>
                    <fullName>DedicatedDesk</fullName>
                </value>
                <value>
                    <fullName>HotDesk</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
                <value>
                    <fullName>ResidentialUnit</fullName>
                </value>
                <value>
                    <fullName>SharedOfficeDesk</fullName>
                </value>
                <value>
                    <fullName>Bed</fullName>
                </value>
                <value>
                    <fullName>VirtualReservable</fullName>
                </value>
                <value>
                    <fullName>HQbyWeWork</fullName>
                </value>
                <value>
                    <fullName>WWLO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Hold_For__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On Hold For</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Reservables</relationshipLabel>
        <relationshipName>Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contract_Sent__c</fullName>
        <label>Opportunity Contract Sent</label>
        <summaryFilterItems>
            <field>Opportunity_Reservable__c.Opportunity_Stage__c</field>
            <operation>equals</operation>
            <value>Contract Sent</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Reservable__c.Reservable__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Paperwork_Pending__c</fullName>
        <formula>IF(Opportunity_Contract_Sent__c &gt;0,"Yes","No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Paperwork Pending</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Offices__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>For Report Use only. Don't modify!</inlineHelpText>
        <label>Pending Offices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physical_Desk_Count__c</fullName>
        <description>This will be the Physical Desk Count. Issue CSI-1322.</description>
        <inlineHelpText>This will be the Physical Desk Count.</inlineHelpText>
        <label>Physical Desk Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <formula>Building__r.Portfolio_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Portfolio_Sales_Manager_Email__c</formula>
        <label>Portfolio Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Portfolio_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portfolio Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <formula>Building__r.Region_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Regional_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Regional_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_for_Hold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible for Hold</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sale_Status__c</fullName>
        <label>Sale Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hold for New Member</fullName>
                </value>
                <value>
                    <fullName>Hold for Internal Transfer</fullName>
                </value>
                <value>
                    <fullName>Paperwork Pending</fullName>
                </value>
                <value>
                    <fullName>Booked (waiting for Spaceman sync)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Space_UUID__c</fullName>
        <description>This UUID will identify the unit using external id, under which current unit will belong to.</description>
        <externalId>true</externalId>
        <label>Space UUID</label>
        <length>88</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Space__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a self lookup.</description>
        <label>Space</label>
        <referenceTo>Reservable__c</referenceTo>
        <relationshipLabel>Reservables</relationshipLabel>
        <relationshipName>Reservables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status_Right_Now__c</fullName>
        <label>Status Right Now</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <formula>Building__r.Territory_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Email__c</fullName>
        <formula>Building__r.Territory_Sales_Manager_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Sales_Manager_Name__c</fullName>
        <formula>Building__r.Territory_Sales_Manager_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Territory Sales Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Offices__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Use for Report Only. Don't modify</inlineHelpText>
        <label>Total Offices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Reservable</label>
    <nameField>
        <label>Reservable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reservables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>AMS_Metropool_Available</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Last_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>Metropool</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>AMS- Metropool Available</label>
    </listViews>
    <listViews>
        <fullName>ATL_Buckhead_All_Offices</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Next_Move_In__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>ATL-Buckhead</value>
        </filters>
        <label>ATL-Buckhead All Offices</label>
    </listViews>
    <listViews>
        <fullName>ATL_Buckhead_Available</fullName>
        <columns>NAME</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Last_Move_Out__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Notes__c</columns>
        <columns>Status__c</columns>
        <columns>Sale_Status__c</columns>
        <columns>On_Hold_For__c</columns>
        <columns>Hold_Expiration__c</columns>
        <columns>Responsible_for_Hold__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>ATL-Buckhead</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>ATL-Buckhead Available</label>
    </listViews>
    <listViews>
        <fullName>AUS_University_Park</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Last_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Notes__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Last_Move_In__c</columns>
        <columns>Next_Move_In__c</columns>
        <columns>Open_Date__c</columns>
        <columns>On_Hold_For__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>AUS-University Park</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>AUS-University Park Available</label>
    </listViews>
    <listViews>
        <fullName>Aldgate_Tower_All_Offices</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Last_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>Aldgate Tower</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <label>LON-Aldgate Tower All Offices</label>
    </listViews>
    <listViews>
        <fullName>Aldgate_Tower_Available</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Last_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>Aldgate Tower</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>LON-Aldgate Tower Available</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Open_Date__c</field>
            <operation>lessThan</operation>
            <value>3/20/2014</value>
        </filters>
        <label>Available All Buildings</label>
    </listViews>
    <listViews>
        <fullName>Available_Dubnov</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>equals</operation>
            <value>TLV-Dubnov</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <label>Available Dubnov</label>
    </listViews>
    <listViews>
        <fullName>Available_HD_ALL</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7 AND 8</booleanFilter>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Open_Date__c</field>
            <operation>lessThan</operation>
        </filters>
        <filters>
            <field>Office_Work_Station_Number__c</field>
            <operation>contains</operation>
            <value>HD</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>corbin</value>
        </filters>
        <filters>
            <field>Office_Work_Station_Type__c</field>
            <operation>notContain</operation>
            <value>Bed</value>
        </filters>
        <filters>
            <field>Office_Work_Station_Type__c</field>
            <operation>notContain</operation>
            <value>ResidentialUnit</value>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>notContain</operation>
            <value>AMS-,BL-,LON-,TLV-,SHA-</value>
        </filters>
        <label>Available HotDesks NorAm - ALL</label>
    </listViews>
    <listViews>
        <fullName>Available_NYC</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 AND 6 AND 7</booleanFilter>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Notes__c</columns>
        <columns>Next_Move_In__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Open_Date__c</field>
            <operation>lessThan</operation>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>NYC</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>notContain</operation>
            <value>corbin</value>
        </filters>
        <filters>
            <field>Office_Work_Station_Type__c</field>
            <operation>notContain</operation>
            <value>Bed</value>
        </filters>
        <filters>
            <field>Office_Work_Station_Type__c</field>
            <operation>notContain</operation>
            <value>ResidentialUnit</value>
        </filters>
        <label>Available NYC</label>
    </listViews>
    <listViews>
        <fullName>Available_Sarona</fullName>
        <columns>NAME</columns>
        <columns>Building__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <filters>
            <field>Building__c</field>
            <operation>equals</operation>
            <value>TLV-Sarona</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <label>Available Sarona</label>
    </listViews>
    <listViews>
        <fullName>BKN_Brooklyn_Heights_All_Offices</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>BKN-Montague St.</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <label>BKN-Montague St. All Offices</label>
    </listViews>
    <listViews>
        <fullName>BKN_Brooklyn_Heights_Available</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Work_Station_Type__c</columns>
        <columns>Sale_Status__c</columns>
        <columns>Notes__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>BKN-Montague St.</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>BKN-Montague St.Available</label>
    </listViews>
    <listViews>
        <fullName>BKN_Williamsburg</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Last_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Paperwork_Pending__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>BKN-South Williamsburg</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filters>
        <label>BKN-South Williamsburg Available</label>
    </listViews>
    <listViews>
        <fullName>BKN_Williamsburg_All_Offices</fullName>
        <columns>NAME</columns>
        <columns>Floor__c</columns>
        <columns>Next_Move_Out__c</columns>
        <columns>Status_Right_Now__c</columns>
        <columns>Office_Work_Station_Number__c</columns>
        <columns>Office_Capacity__c</columns>
        <columns>Monthly_Price__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Building__c</field>
            <operation>contains</operation>
            <value>Williamsburg</value>
        </filters>
        <filters>
            <field>Archived_On__c</field>
            <operation>equals</operation>
        </filters>
        <label>BKN-Williamsburg All Offices</label>
    </listViews>
</CustomObject>